Fix API entry heading vertical alignment
Styling changes necessary to make the API entry headings (such as
'Prototype' etc) to align vertically when browser window is wide.
Getting the alignment to work requires awkward margin hacks.

Also reimplement CSS styling for stacks to be more simple.

--- a/website/style-api.css
+++ b/website/style-api.css
@@ -7,22 +7,48 @@
 	 * to make the entries more compact.
 	 *
 	 * Specificity must override normal section heading rules.
+	 *
+	 * The challenge here is to keep the section heading vertically
+	 * aligned with the content on the right.  To do this, we need
+	 * to avoid top margins in the elements on the right (paragraphs,
+	 * stacks, <pre>-blocks) which is a bit hackish.  The api-part
+	 * div margins are then used to provide spacing between the API
+	 * documentation parts.
 	 */
-	/* FIXME: layout is pretty inconsistent now */
-	h2.api-proto,
-	h2.api-stack,
-	h2.api-summary,
-	h2.api-example,
-	h2.api-seealso {
+
+	.api-call h2.api-proto,
+	.api-call h2.api-stack,
+	.api-call h2.api-summary,
+	.api-call h2.api-example,
+	.api-call h2.api-seealso {
 		position: absolute;
 		left: 10px;
 		margin: 0;
-		padding: 5px 0 0 0;
+		padding: 0 0 0 0;
 		width: 200px;
 		text-align: right;
 		height: 0;
 		overflow: visible;
 		color: #ccccdd;
 		font-size: 100%;
+	}
+
+	.api-part {
+		margin: 3ex 0 3ex 0;
+	}
+
+	.content .api-call .stack-wrapper {
+		margin-top: 0;
+		margin-bottom: 2ex;
+	}
+	.content .api-call .stack {
+		margin-top: 0;
+	}
+
+	.content .api-call p {
+		margin-top: 0;
+	}
+	.content .api-call pre {
+		margin-top: 0;
 	}
 }
